refactor: replace List.of with Arrays.asList for consistency in test cases